boreal/tests/assets/invalid_files/compilation/invalid_identifier_index_type.yar
// [error: expected an expression of type integer]
import "pe"

rule a {
    condition:
        pe.sections["a"] == 3
}
